# tauri-yew-app

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
src/: app.rs  main.rs  routes.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: mod.rs  sidebar.rs
src/components/pages/: chat.rs  home.rs  media.rs  mod.rs
