[package]
name = "yew-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-logger = "0.2"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "File", "FileList", "HtmlInputElement", "HtmlSelectElement", "Url", "Window", "Document", "HtmlElement", "Element", "Storage"] }
js-sys = "0.3"
reqwasm = "0.5"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
console_error_panic_hook = "0.1.7"

[workspace]
members = ["src-tauri"]
